# db-first

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: testing.yaml
examples/: full_example.py
src/db_first/: __init__.py  base.py  base_model.py  exc.py  query_maker.py  statement_maker.py
src/db_first/actions/: __init__.py  base.py  web.py
src/db_first/dbal/: __init__.py  exceptions.py  paginate.py  sqla.py
src/db_first/decorators/: __init__.py  validation.py
src/db_first/mixins/: __init__.py  crud.py  pagination.py
src/db_first/schemas/: __init__.py  base.py  paginate.py
tests/: conftest.py  test_actions.py  test_crud_mixin.py  test_crud_mixin__bulk.py  test_model_mixin.py  test_pagination_mixin.py  test_query_maker.py  test_statement_maker.py
tests/contrib/: schemas.py
tests/dbal/: test_dbal.py  test_dbal_error.py
